--- a/src/app/admin/components/create-book/create-book.component.html
+++ b/src/app/admin/components/create-book/create-book.component.html
@@ -53,7 +53,10 @@
     </div>
     <div>
       <label>book_description</label>
-      <input formControlName="book_description"/>
+      <!-- <input formControlName="book_description"/> -->
+      <textarea rows="4" cols="50" formControlName="book_description">
+        At w3schools.com you will learn how to make a website. They offer free tutorials in all web development technologies.
+        </textarea>
       <span
         *ngIf="
           bookCreateFormGroup.get('book_description').invalid &&
@@ -97,6 +100,3 @@
 </div>
 
 
-<textarea id="w3review" name="w3review" rows="4" cols="50">
-  At w3schools.com you will learn how to make a website. They offer free tutorials in all web development technologies.
-  </textarea>
