--- a/src/app/admin/components/book-list/book-list.component.html
+++ b/src/app/admin/components/book-list/book-list.component.html
@@ -7,6 +7,7 @@
                 <th>Book Author</th>
                 <th>Book Image</th>
                 <th>Total Chapters</th>
+                <th>Action</th>
             </tr>
         </thead>
         <tbody>
@@ -18,6 +19,9 @@
                     <img [src]="GetImageFirebaseUrl(book.book_image)" alt="" style="width: 50px; height: 50px;">
                 </td>            
                 <td>{{book.chapters_total}}</td>
+                <td>
+                    <a [routerLink]="['/admin/book-details', book.book_id]">Edit</a>
+                </td>
             </tr>
         </tbody>
     </table>
